# cra-scopa

./: .gitignore  run_dev.sh
.ipynb_checkpoints/: docker-compose-checkpoint.yml
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
server/: Dockerfile  database.db  main.py  pyproject.toml  seed.py
